# paypal-client

./: .gitignore  LICENSE  README.md  README.rst  pyproject.toml  setup.py
src/: api.py  exceptions.py
src/paypal_client/: api.py
